// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateExperiment Handles error with api v2 and then rethrows (so the UI doesnt reorder) 1`] = `
Array [
  undefined,
  Object {
    "error": undefined,
  },
]
`;

exports[`updateExperiment Updates properties with api v2 correctly 1`] = `
Array [
  undefined,
  Object {
    "experiment": Object {
      "sampleIds": Array [
        "sample2",
        "sample1",
      ],
    },
    "experimentId": "experiment-1",
  },
]
`;
